# clargo

./: Cargo.toml  README.md
src/: build.rs  check.rs  clean.rs  help.rs  init.rs  lib.rs  main.rs
src/modes/: build.rs  check.rs  clean.rs  help.rs  init.rs  mod.rs  run.rs
src/utils/: incremental.rs  mod.rs
