[package]
name = "clargo"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = { version = "2.1.0", default-features = false }
serde = { version = "1.0.202", default-features = false, features = ["derive"] }
sha2 = { version = "0.10.8", default-features = false }
toml = { version = "0.8.13", default-features = false, features = ["parse"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"
incremental = false
debug = false
